# wellfield

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
src/wellfield/: __init__.py  __main__.py  wellfield.py
src/wellfield/chemistry/: __init__.py  watersample.py
tests/: test_chem_watersample.py
